# arcade

./: CMakeLists.txt  GitNorme.md  README.md  config
puml/: \  core.puml  game.puml  graphics.puml  plan.puml
src/: main.cpp
src/core/: CMakeLists.txt  Core.cpp  Makefile  cmake_install.cmake
src/core/exceptions/include/: CoreExceptions.hpp
src/core/include/: core.hpp
src/core/parser/include/: Parser.hpp
src/core/parser/src/: Parser.cpp
src/games/controller/include/: Game.hpp  IGame.hpp
src/games/controller/src/: Game.cpp
src/games/menu/: CMakeLists.txt  Makefile  cmake_install.cmake
src/games/menu/include/: MenuGame.hpp  Parser.hpp
src/games/menu/src/: MenuGame.cpp  Parser.cpp
src/games/nibbler/: CMakeLists.txt  Makefile  cmake_install.cmake
src/games/nibbler/include/: Fruit.hpp  Nibbler.hpp  NibblerGame.hpp
src/games/nibbler/src/: Fruit.cpp  Nibbler.cpp  NibblerGame.cpp
src/games/snake/: CMakeLists.txt  Makefile  cmake_install.cmake
src/games/snake/include/: Fruit.hpp  Snake.hpp  SnakeGame.hpp
src/games/snake/src/: Fruit.cpp  Snake.cpp  SnakeGame.cpp
src/graphics/Gfx/Controller/include/: GfxController.hpp  IGfxController.hpp
src/graphics/Gfx/Controller/src/: GfxController.cpp
src/graphics/Gfx/Display/include/: Display.hpp  IDisplay.hpp
src/graphics/Gfx/Display/src/: Display.cpp
src/graphics/Gfx/Error/include/: GfxError.hpp
src/graphics/Gfx/Error/src/: GfxError.cpp
src/graphics/Gfx/Event/include/: Event.hpp  IEvent.hpp
src/graphics/Gfx/Event/src/: Event.cpp
src/graphics/Gfx/Music/include/: IMusic.hpp  Music.hpp
src/graphics/Gfx/Music/src/: Music.cpp
src/graphics/Gfx/Texture/include/: ITexture.hpp  Texture.hpp
src/graphics/Gfx/Texture/src/: Texture.cpp
src/graphics/ncurses/: CMakeLists.txt  Makefile  cmake_install.cmake
src/graphics/ncurses/Controller/include/: NcursesController.hpp
src/graphics/ncurses/Controller/src/: NcursesController.cpp
src/graphics/ncurses/Display/include/: NcursesDisplay.hpp
src/graphics/ncurses/Display/src/: NcursesDisplay.cpp
src/graphics/ncurses/Error/include/: NcursesError.hpp
src/graphics/ncurses/Error/src/: NcursesError.cpp
src/graphics/ncurses/Event/include/: NcursesEvent.hpp
src/graphics/ncurses/Event/src/: NcursesEvent.cpp
src/graphics/ncurses/Music/include/: NcursesMusic.hpp
src/graphics/ncurses/Music/src/: NcursesMusic.cpp
src/graphics/ncurses/Texture/include/: NcursesTexture.hpp
src/graphics/ncurses/Texture/src/: NcursesTexture.cpp
src/graphics/sdl/: CMakeLists.txt  Makefile  cmake_install.cmake
src/graphics/sdl/Controller/include/: SdlController.hpp
src/graphics/sdl/Controller/src/: SdlController.cpp
src/graphics/sdl/Display/include/: SdlDisplay.hpp
src/graphics/sdl/Display/src/: SdlDisplay.cpp
src/graphics/sdl/Error/include/: SdlError.hpp
src/graphics/sdl/Error/src/: SdlError.cpp
src/graphics/sdl/Event/include/: SdlEvent.hpp
src/graphics/sdl/Event/src/: SdlEvent.cpp
src/graphics/sdl/Music/include/: SdlMusic.hpp
src/graphics/sdl/Music/src/: SdlMusic.cpp
src/graphics/sdl/Texture/include/: SdlTexture.hpp
src/graphics/sdl/Texture/src/: SdlTexture.cpp
src/graphics/sfml/: CMakeLists.txt  Makefile  cmake_install.cmake
src/graphics/sfml/Controller/include/: SfmlController.hpp
src/graphics/sfml/Controller/src/: SfmlController.cpp
src/graphics/sfml/Display/include/: SfmlDisplay.hpp
src/graphics/sfml/Display/src/: SfmlDisplay.cpp
src/graphics/sfml/Error/include/: SfmlError.hpp
src/graphics/sfml/Error/src/: SfmlError.cpp
src/graphics/sfml/Event/include/: SfmlEvent.hpp
src/graphics/sfml/Event/src/: SfmlEvent.cpp
src/graphics/sfml/Music/include/: SfmlMusic.hpp
src/graphics/sfml/Music/src/: SfmlMusic.cpp
src/graphics/sfml/Texture/include/: SfmlTexture.hpp
src/graphics/sfml/Texture/src/: SfmlTexture.cpp
